Correcting incorrect values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=docker build -t urlshort .
+spring.application.name=url-shortening
 
 ##### PostgresSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/urlshortening
